test/visibility/private/uses/pointOfInstantiation/methodOnType2.good
methodOnType2.chpl:27: In function 'bar':
methodOnType2.chpl:29: error: unresolved call 'C.goo()'
methodOnType2.chpl:29: note: because no functions named goo found in scope
  methodOnType2.chpl:38: called as bar(c: borrowed C)
